<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editText_search"
        style="@style/textviewstyle_Medium.black"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="5dp"
        android:layout_weight="0"
        android:background="@drawable/view_round_corner_with_border"
        android:ellipsize="end"
        android:hint="@string/search_by"
        android:padding="5dp"
        android:singleLine="true" />

    <ListView
        android:id="@+id/listview_listgateways"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:divider="@color/white"
        android:dividerHeight="1dp"
        android:fastScrollEnabled="true" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="0"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="0"
            android:background="@drawable/view_round_corner_with_border"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView_listGateways_apiHit"
                style="@style/textviewstyle_Medium.light"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1.2"
                android:gravity="center_vertical|left"
                android:padding="5dp"
                android:text="@string/api_hit" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="0"
                android:background="@color/header_text_color" />

            <TextView
                android:id="@+id/textView_listGateways_totalGateways"
                style="@style/textviewstyle_Medium.light"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/total_gateways" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:orientation="vertical"
            android:visibility="gone" >

            <Button
                android:id="@+id/button_listGateways_listAll"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="3dp"
                android:background="@drawable/button_selector"
                android:text="@string/list_all"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="3"
                android:background="@drawable/view_round_corner_with_border"
                android:gravity="center" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Sort"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/view_with_border"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/button_listGateways_price"
                    style="@style/button_small_font"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/Name"/>

                <Button
                    android:id="@+id/button_listGateways_rating"
                    style="@style/button_small_font"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/rating" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>