<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/productDetails_rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0"
                android:background="@drawable/view_round_corner_with_border"
                android:gravity="left"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center_vertical">
                        <TextView
                            android:id="@+id/textview_gatewayInfo_name"
                            style="@style/textviewstyle_MediumBig"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_weight="1"
                            android:background="@drawable/button_selector"
                            android:gravity="center"
                            android:text="@string/Name"
                            android:textColor="@color/white"
                            android:visibility="visible"/>

                    <com.android.volley.toolbox.NetworkImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:scaleType="fitXY"
                        android:src="@drawable/image_uploading" />



                        </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp">



                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:orientation="horizontal"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp">

                            <TextView
                                android:id="@+id/textView_gatewayInfo_rating"
                                style="@style/textviewstyle_Medium.light"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_weight="0"
                                android:gravity="center_vertical|left"
                                android:padding="2dp"
                                android:text="@string/rating_star" />

                            <RatingBar
                                android:id="@+id/ratingBar_gatewayInfo"
                                style="?android:attr/ratingBarStyleIndicator"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="0"
                                android:clickable="false"
                                android:numStars="5"
                                android:rating="2.5"
                                android:stepSize=".1" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView_gatewayInfo_transactionFee"
                                style="@style/textviewstyle_Medium.light"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center_vertical|left"
                                android:text="@string/transaction_fee" />


                            <TextView
                                android:id="@+id/textView_gatewayInfo_branding"
                                style="@style/textviewstyle_Medium.light"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:layout_marginLeft="5dp"
                                android:gravity="center_vertical|right"
                                android:text="@string/branding" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <!--<LinearLayout-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_weight="0"-->
                    <!--android:orientation="vertical"-->
                    <!--android:padding="5dp">-->


                    <!--<LinearLayout-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_marginTop="5dp"-->
                        <!--android:orientation="horizontal">-->


                    <!--</LinearLayout>-->
                <!--</LinearLayout>-->


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView_gatewayInfo_supportedCurrencies"
                            style="@style/textviewstyle_Medium.light"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/supported_currencies" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="0"
            android:background="@drawable/view_round_corner_with_border"
            android:orientation="vertical">

            <TextView
                style="@style/textviewstyle_MediumBig"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="0"
                android:background="@drawable/button_selector"
                android:gravity="left|center_vertical"
                android:padding="5dp"
                android:text="@string/description"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView_gatewayInfo_description"
                style="@style/textviewstyle_Medium.light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:text="" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <Button
                android:id="@+id/button_gatewayInfo_share"
                style="@style/button_small_font"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/share"/>

            <Button
                android:id="@+id/button_gatewayInfo_document"
                style="@style/button_small_font"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/document"/>


            <Button
                android:id="@+id/button_gatewayInfo_like"
                style="@style/button_small_font"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/like"/>
        </LinearLayout>
    </LinearLayout>
    </ScrollView>

</LinearLayout>